<resources>
    <string name="app_name">ContactsLite</string>
    <string name="Contacts">Contacts</string>
    <string name="DialPad">Dial Pad</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="PLACEHOLDER_COUNTRY_CODE">+90</string>
    <string name="PLACEHOLDER_PHONE_NUMBER">530 100 0022</string>
    <string name="_0">0</string>
    <string name="please_confirm_your_country">Confirm your country</string>
    <string name="confirm">Confirm</string>
    <string name="setting1">Default Country</string>
    <string name="setting2">Phone Number Validator</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="add_new_group">Add New Group</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="entered_phone_number_was_not_valid">Entered phone number was not valid, please try again.</string>
    <string name="entered_contact_name_cannot_be_blank">Entered contact name cannot be blank.</string>
    <string name="entered_group_name_cannot_be_blank">Group name field cannot be blank.</string>
    <string name="preference_file_key">com.burakcanduzcan.contactslite</string>
    <string name="group_name">Group name</string>
    <string name="are_you_sure_you_want_to_delete_this_group">Are you sure you want to delete this group? This action cannot be undone.</string>
    <string name="are_you_sure_you_want_to_delete_this_contact">Are you sure you want to delete this contact? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="example_user">""</string>
    <string name="select_a_number_to_assign_this_contact_for_a_quick_call">Select a number to assign this contact for a quick call.</string>
</resources>