<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="2"
        android:text="@string/select_a_number_to_assign_this_contact_for_a_quick_call"
        android:textColor="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibBack"
        app:layout_constraintTop_toTopOf="@+id/ibBack" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_1"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn2" />

    <TextView
        android:id="@+id/tvBtn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintEnd_toEndOf="@+id/btn1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_2"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/ibBack" />

    <TextView
        android:id="@+id/tvBtn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="@+id/btn2"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_3"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@id/btn2" />

    <TextView
        android:id="@+id/tvBtn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="@+id/btn3"
        app:layout_constraintStart_toStartOf="@+id/btn3"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_4"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <TextView
        android:id="@+id/tvBtn4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn4"
        app:layout_constraintEnd_toEndOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_5"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <TextView
        android:id="@+id/tvBtn5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn5"
        app:layout_constraintEnd_toEndOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="@+id/btn5"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_6"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <TextView
        android:id="@+id/tvBtn6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="@+id/btn6"
        app:layout_constraintStart_toStartOf="@+id/btn6"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_7"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <TextView
        android:id="@+id/tvBtn7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintEnd_toEndOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="@+id/btn7"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_8"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <TextView
        android:id="@+id/tvBtn8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn8"
        app:layout_constraintEnd_toEndOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="@+id/btn8"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_9"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <TextView
        android:id="@+id/tvBtn9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="@+id/btn9"
        app:layout_constraintStart_toStartOf="@+id/btn9"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <TextView
        android:id="@+id/tvBtn0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/example_user"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn0"
        app:layout_constraintEnd_toEndOf="@+id/btn0"
        app:layout_constraintStart_toStartOf="@+id/btn0"
        tools:ignore="HardcodedText,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>